static/css/site.css
/* main {
    max-width: 38rem;
    padding: 2rem;
    margin: auto;
} */

:not(code *), :not(pre *) {
    letter-spacing: 0px !important;
    font-family: "Arial" !important;
} 

pre {
    white-space: pre-wrap;       /* Since CSS 2.1 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
    box-shadow: none;
}

#project_title a:hover {
    text-shadow: .1em .2em 3px rgb(0, 0, 0);
}

/* to sleeken up text inputs */
input:focus, textarea:focus{
	outline: none;
}
input[type=search]::-webkit-search-cancel-button {
    -webkit-appearance: searchfield-cancel-button;
}

/* remove the background from the audio element (may only work for webkit browsers) */
audio::-webkit-media-controls-panel { 
    background-color: #0000;
    color: #0000;
}

/* for dark mode elements */
h1, h2, h3, h4, h5, h6 {color: #EEE!important; }
pre, code {font-size: 120%; } 
form, code {background-color: #fff1; }
pre code {background-color: #fff; }
figcaption {font-size: 70%; text-align: center; }
video {max-width: 100%; height: auto; }
img {
    padding: 0 !important;
    margin: 10px 0 0 0 !important;
    box-shadow: 0 0 0px #0000!important;
    -webkit-box-shadow: 0 0 0px #0000!important;
    -moz-box-shadow: 0 0 0px #0000!important;
    -o-box-shadow: 0 0 0px #0000!important;
    -ms-box-shadow: 0 0 0px #0000!important;
    border: none;
/*    background: url(https://raw.githubusercontent.com/arialhamed/static/main/images/spinner.gif) no-repeat;*/
}
nav {
    background-color:#fff1 !important;
}

.language-plaintext {
    background-color: #333 !important;
    mix-blend-mode: difference;
}




.inner {
    max-width: 800px !important; 
}
#main_content {
    padding-top: 15px!important;
}
#main_content_wrap {
    flex: 1; 
    background: #202020!important; 
    border-top: 1px solid #202020!important; 
    border-bottom: 1px solid #202020!important; 
    color: #DDD!important;
}
#header_wrap, #footer_wrap {
    background: #202020!important;
}

/* Comment CSS start */
.comments {border-top: 1px dashed #fff6 !important;}
.comment-item {background-color: #fff2!important;}
#comment-form {background-color: transparent!important;}
.comment-reply-button img {visibility: hidden!important;}
#comment-comment, #comment-name {
    background-color: #fff2!important;
    color: white;
}
#comment-submit {
    background-color: #36758888!important;
    color: white;
}
/* Comment CSS end */


.disable-selection {
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;    
}
.highlight {
    mix-blend-mode: difference;
}


/* ---- particles.js container ---- */
/*this canvas css block ensure that the particles don't leave white space at the bottom*/
canvas {
    display: block;
}
#particles-js {
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: #20202000;
    background-image: url("");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
}
/* end of particles.js css - credit to Vincent Garreau*/

.despair{color:#f0f8ff;text-shadow:2px 2px 0 #222,4px 4px 0 #444,6px 6px 0 #666,8px 8px 0 #888,10px 10px 0 #aaa,12px 12px 0 #ccc,14px 14px 0 #eee,-2px -2px 0 #222,-4px -4px 0 #444,-6px -6px 0 #666,-8px -8px 0 #888,-10px -10px 0 #aaa,-12px -12px 0 #ccc,-14px -14px 0 #eee}
.lag-echo{text-shadow:1px 11px 0 #333,2px 22px 1 #444,3px 33px 2 #555,4px 44px 3 #666,5px 55px 4 #777,6px 66px 5 #888,7px 77px 6 #999,8px 88px 7 #AAA,9px 99px 8 #BBB}
.abyssal{text-shadow:5px 10px 0 #333,10px 20px 0 #666,15px 30px 0 #999,20px 40px 0 #ccc}

.hover-rotate-10:hover {
    font-size: 4rem;
    transform: rotate(10deg);
    /* Legacy vendor prefixes that you probably don't need... */			
    -webkit-transform: rotate(10deg); /* Safari */
    -moz-transform: rotate(10deg); /* Firefox */		
    -ms-transform: rotate(10deg); /* IE */			
    -o-transform: rotate(10deg); /* Opera */			
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3); /* Internet Explorer */
}

.rotate-180 {
    transform: rotate(180deg);
    /* Legacy vendor prefixes that you probably don't need... */			
    -webkit-transform: rotate(180deg); /* Safari */
    -moz-transform: rotate(180deg); /* Firefox */		
    -ms-transform: rotate(180deg); /* IE */			
    -o-transform: rotate(180deg); /* Opera */			
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3); /* Internet Explorer */
}

.PageNavigation {
    font-size: 14px;
    display: block;
    width: auto;
    overflow: hidden;
  }

.PageNavigation a {
display: block;
width: 50%;
float: left;
margin: 1em 0;
font-size: 80%;
}

.timestamp {
    color: #f2f2f2;
    background-color: #333;
    border-color: #333;
    border-width: medium;
    border-style: solid;
    border-radius: 100px;
    padding: 0px 10px 0px 10px
}

.active-dropdown {
    color: #1e2125;
    background-color: #e9ecef;
}

.caption-middle {
    position: absolute;
    bottom: 5%;
    left: 50%;
    transform: translate(-50%, -50%);
}

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

/* Fixed/sticky icon bar (vertically aligned 50% from the top of the screen) */
.social-bar {
    position: fixed;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

/* Style the icon bar links */
.social-bar a {
    display: block;
    text-align: center;
    padding: 16px;
    transition: all 0.3s ease;
    color: white;
    font-size: 20px;
    background: #333;
}

/* Style the social media icons with color, if you want */
.social-bar a:hover {
    background-color: #111;
}

.social-bar a i {
    color: white;
    background: white;
}

.android-icon {
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
    height: 100%;
    margin-left: auto;
}
.android-caption {
    background-repeat: no-repeat;
    background-size: fill;
    margin-right: auto;
}

.project{
    margin-bottom: 2rem; 
    border-color: #333; 
    border-style: solid;
    border-width: medium;
    border-radius: 1rem;
}

.text-secret{
    width: 100%!important;
    text-align: center!important;
    background-color:#0000;
    border:0px;
    cursor:default;

    display: block;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #ddd;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    border-radius: 0.25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

footer a:hover {
    color: #888;
}

#back-to-top:hover {
    background: #444;
}

/* for disabled posts in fyp */
.btn.disabled, .btn:disabled, fieldset:disabled .btn {
    pointer-events: none;
    opacity: .35;
}

.btn-outline-dark {
    background-color: #fff1 !important;
}

.carousel-caption { /*third-party*/
    background: rgba(0, 0, 0, 0.5);
}

.captionedContainer { /*third-party*/
    position: relative;
    max-width: 800px; /* Maximum width */
    margin: 0 auto; /* Center it */
}

.captionedContainer .content { /*third-party*/
    position: absolute; /* Position the background text */
    bottom: 0; /* At the bottom. Use top:0 to append it to the top */
    background: rgb(0, 0, 0); /* Fallback color */
    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
    color: #f1f1f1 !important; /* Grey text */
    width: 100%; /* Full width */
    padding: 20px; /* Some padding */
}

/* for dark mode accordion */
.accordion-head {
    background: none;
}
.accordion-item {
	background-color: #0000!important; 
	border: 1px solid #0000!important; 
}
.accordion-button {
	background-color: #fff1 !important; 
	color: rgba(255,255,255,.55)!important; 
}
.accordion-button:not(.collapsed) {
	color: rgba(255,255,255,.55)!important; 
	/* background-color: #fff1 !important;  */
}
.accordion-button:not(.collapsed)::after {
	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23eeeeee'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e")!important; 
}
.accordion-button::after {
	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23eeeeee'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e")!important; 
}
.accordion-button:focus {
    border-color: #0000!important;
    box-shadow: 0 0 0 0px #0000!important;
}
.accordion-header {
    background: none;
}

/* for dark mode links not in nav, header & footer */
#main_content_wrap a:not(.nav-link, .dropdown-item) { /*third-party*/
    color: rgba(200,200,255,.75) !important
}
#main_content_wrap a:not(.nav-link, .dropdown-item):hover { /*third-party*/
    color: rgba(200,200,255,.55) !important
}

/* for dark mode dropdowns from navs */
.dropdown-menu {
	background-color: #333!important;
	border: 1px solid #999!important;  
}
.dropdown-item {
	color: rgba(255,255,255,.75) !important; 
}
.dropdown-item:focus, .dropdown-item:hover {
	background-color: #888 !important; 
}

.navbar-toggler:focus {
    box-shadow: none;
}

/* EmulatorJS */
.ejs_context_menu { /*third-party*/
    display: none !important;
}

#scripts-content, #browse-display, #browse-content {
    position: relative;
    width: 140%;
    left: max(-20%, calc(400px - 50vw));
    max-width: 98vw;
}

/* MOBILE STYLE */
@media only screen and (max-width: 578px) {
    #footer_wrap footer p {
        float: unset !important;
    }
    #particles-js, canvas.particles-js-canvas-el {
        display: none !important;
    }
    #particles-mobile {
        display: block !important;
    }
    /* .inner {
        max-width: 578px !important;
    } */
    #scripts-content, #browse-display, #browse-content { 
        position: static !important;
        width: 100% !important;
        left: 0% !important;
    }
    #show-text, .line-numbers {
        font-size: 70% !important;
    }
    pre[class*="language-"].line-numbers {
        padding-left: 2.3em !important;
    }
}

